--- a/composer.json
+++ b/composer.json
@@ -36,9 +36,9 @@
 		"10up/post-finder": "^0.3.0"
 	},
 	"require-dev": {
-		"wpackagist-plugin/query-monitor": "^2.17",
-		"wpackagist-plugin/rewrite-rules-inspector": "^1.2",
-		"wpackagist-plugin/user-switching": "^1.3"
+		"wpackagist-plugin/query-monitor": "*",
+		"wpackagist-plugin/rewrite-rules-inspector": "*",
+		"wpackagist-plugin/user-switching": "*"
 	},
 	"extra": {
 		"installer-paths": {
