--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
 		"wpackagist-plugin/simple-local-avatars": "^2.0",
 		"wpackagist-plugin/wp-fail2ban": "^3.5",
 		"wpackagist-plugin/disable-real-mime-check": "^1.0",
+		"wpackagist-plugin/my-eyes-are-up-here":"^1.1.9",
 		"10up/wp-minions": "^3.0",
 		"10up/post-finder": "^0.3.0"
 	},
