--- a/composer.json
+++ b/composer.json
@@ -34,10 +34,10 @@
 		"wpackagist-plugin/disable-real-mime-check": "^1.0",
 		"wpackagist-plugin/my-eyes-are-up-here":"^1.1.9",
 		"10up/wp-minions": "^3.0",
-		"10up/post-finder": "^0.3.0"
+		"10up/post-finder": "^0.3.0",
+		"wpackagist-plugin/query-monitor": "^3.1"
 	},
 	"require-dev": {
-		"wpackagist-plugin/query-monitor": "*",
 		"wpackagist-plugin/rewrite-rules-inspector": "*",
 		"wpackagist-plugin/user-switching": "*"
 	},
