Add wp newrelic plugin

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ mu-plugins/post-finder/
 !/plugins/gravityforms/
 !/plugins/user-role-editor-pro/
 !/plugins/configure-smtp/
+!/plugins/wp-newrelic/
 
 themes/index.php
 themes/twentyfourteen
