--- a/themes/package.json
+++ b/themes/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "video.js": "^7.1.0",
     "videojs-contrib-ads": "^6.4.3",
-    "videojs-contrib-hls": "^5.14.1",
+    "videojs-contrib-quality-levels": "^2.0.7",
+    "videojs-hls-quality-selector": "0.0.8",
     "videojs-ima": "^1.5.1"
   }
 }
