--- a/composer.json
+++ b/composer.json
@@ -8,35 +8,35 @@
 	],
 	"require": {
 		"oomphinc/composer-installers-extender": "^1.1",
-		"wpackagist-plugin/advanced-custom-fields": "5.6.8",
-		"wpackagist-plugin/fb-instant-articles": "4.0.6",
-		"wpackagist-plugin/debug-bar": "^0.9.0",
-		"wpackagist-plugin/debug-bar-cron": "^0.1.3",
-		"wpackagist-plugin/debug-bar-extender": "^0.5.0",
-		"wpackagist-plugin/debug-bar-remote-requests": "^0.1.2",
-		"wpackagist-plugin/duplicate-post": "3.2",
-		"wpackagist-plugin/edit-flow": "^0.8",
+		"wpackagist-plugin/advanced-custom-fields": "*",
+		"wpackagist-plugin/fb-instant-articles": "*",
+		"wpackagist-plugin/debug-bar": "*",
+		"wpackagist-plugin/debug-bar-cron": "*",
+		"wpackagist-plugin/debug-bar-extender": "*",
+		"wpackagist-plugin/debug-bar-remote-requests": "*",
+		"wpackagist-plugin/duplicate-post": "*",
+		"wpackagist-plugin/edit-flow": "*",
 		"wpackagist-plugin/elasticpress": "*",
-		"wpackagist-plugin/feed-pull": "^0.2.6",
-		"wpackagist-plugin/ooyala-video-browser": "2.5.2",
-		"wpackagist-plugin/public-post-preview": "^2.6",
-		"wpackagist-plugin/restricted-site-access": "^6.0",
-		"wpackagist-plugin/term-management-tools": "^1.1",
-		"wpackagist-plugin/the-events-calendar": "4.6.2",
-		"wpackagist-plugin/video-thumbnails": "^2.12",
-		"wpackagist-plugin/wordpress-importer": "^0.6.3",
-		"wpackagist-plugin/wp-crontrol": "^1.6",
-		"wpackagist-plugin/yet-another-related-posts-plugin": "^4.4",
-		"wpackagist-plugin/wordpress-seo": "5.6.1",
-		"wpackagist-plugin/safe-redirect-manager": "1.7.8",
-		"wpackagist-plugin/simple-local-avatars": "^2.0",
-		"wpackagist-plugin/wp-fail2ban": "^3.5",
-		"wpackagist-plugin/disable-real-mime-check": "^1.0",
-		"wpackagist-plugin/my-eyes-are-up-here":"^1.1.9",
-		"wpackagist-plugin/query-monitor": "^3.1",
-		"wpackagist-plugin/regenerate-thumbnails":"^3.0.2",
-		"10up/wp-minions": "^4.0",
-		"10up/post-finder": "^0.3.0"
+		"wpackagist-plugin/feed-pull": "*",
+		"wpackagist-plugin/ooyala-video-browser": "*",
+		"wpackagist-plugin/public-post-preview": "*",
+		"wpackagist-plugin/restricted-site-access": "*",
+		"wpackagist-plugin/term-management-tools": "*",
+		"wpackagist-plugin/the-events-calendar": "*",
+		"wpackagist-plugin/video-thumbnails": "*",
+		"wpackagist-plugin/wordpress-importer": "*",
+		"wpackagist-plugin/wp-crontrol": "*",
+		"wpackagist-plugin/yet-another-related-posts-plugin": "*",
+		"wpackagist-plugin/wordpress-seo": "*",
+		"wpackagist-plugin/safe-redirect-manager": "*",
+		"wpackagist-plugin/simple-local-avatars": "*",
+		"wpackagist-plugin/wp-fail2ban": "*",
+		"wpackagist-plugin/disable-real-mime-check": "*",
+		"wpackagist-plugin/my-eyes-are-up-here":"*",
+		"wpackagist-plugin/query-monitor": "*",
+		"wpackagist-plugin/regenerate-thumbnails":"*",
+		"10up/wp-minions": "*",
+		"10up/post-finder": "*"
 	},
 	"require-dev": {
 		"wpackagist-plugin/rewrite-rules-inspector": "*",
