Added basic rendering of homepage and single article plus added primary nav menu

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
 		"wpackagist-plugin/debug-bar-extender": "*",
 		"wpackagist-plugin/debug-bar-remote-requests": "*",
 		"wpackagist-plugin/rewrite-rules-inspector": "*",
-		"wpackagist-plugin/user-switching": "*"
+		"wpackagist-plugin/user-switching": "*",
+		"wpackagist-plugin/fakerpress": "*"
 	},
 	"autoload": {
 		"psr-0": {
