--- a/themes/experience-engine/package.json
+++ b/themes/experience-engine/package.json
@@ -1,10 +1,9 @@
 {
 	"name": "experience-engine",
 	"scripts": {
-		"webpack": "webpack --progress app=./assets/scripts/app.js",
-		"build": "npm run webpack -- --config-name=dev-config",
-		"watch": "npm run webpack -- --config-name=watch-config",
-		"bundle": "npm run webpack -- --config-name=prod-config"
+		"build": "webpack --progress app=./assets/scripts/app.js --config-name=dev-config",
+		"watch": "webpack --progress app=./assets/scripts/app.js --config-name=watch-config",
+		"bundle": "webpack --progress app=./assets/scripts/app.js --config-name=prod-config"
 	},
 	"dependencies": {
 		"@10up/eslint-config": "^1.0.6",
@@ -13,8 +12,13 @@
 		"@babel/preset-react": "^7.0.0",
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.0.4",
+		"css-loader": "^1.0.0",
 		"eslint": "^5.7.0",
 		"eslint-loader": "^2.1.1",
+		"mini-css-extract-plugin": "^0.4.4",
+		"postcss-import": "^12.0.0",
+		"postcss-loader": "^3.0.0",
+		"postcss-preset-env": "^6.1.1",
 		"react": "^16.5.2",
 		"react-dom": "^16.5.2",
 		"webpack": "^4.20.2",
