--- a/themes/experience-engine/package.json
+++ b/themes/experience-engine/package.json
@@ -23,6 +23,7 @@
 		"postcss-import": "^12.0.0",
 		"postcss-loader": "^3.0.0",
 		"postcss-preset-env": "^6.1.1",
+		"prop-types": "^15.6.2",
 		"react": "^16.5.2",
 		"react-dom": "^16.5.2",
 		"webpack": "^4.20.2",
