--- a/themes/experience-engine/package.json
+++ b/themes/experience-engine/package.json
@@ -18,6 +18,7 @@
 		"eslint-plugin-import": "^2.14.0",
 		"eslint-plugin-jsx-a11y": "^6.1.2",
 		"eslint-plugin-react": "^7.11.1",
+		"firebase": "^5.5.4",
 		"mini-css-extract-plugin": "^0.4.4",
 		"nprogress": "^0.2.0",
 		"postcss-import": "^12.0.0",
@@ -52,7 +53,9 @@
 			"indent": [
 				"error",
 				"tab",
-				{ "SwitchCase": 1 }
+				{
+					"SwitchCase": 1
+				}
 			]
 		}
 	},
