--- a/themes/experience-engine/package.json
+++ b/themes/experience-engine/package.json
@@ -14,6 +14,7 @@
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.0.4",
 		"css-loader": "^1.0.0",
+		"cssnano": "^4.1.6",
 		"eslint": "^5.7.0",
 		"eslint-loader": "^2.1.1",
 		"eslint-plugin-import": "^2.14.0",
