--- a/themes/experience-engine/package.json
+++ b/themes/experience-engine/package.json
@@ -32,6 +32,7 @@
 		"react-dom": "^16.5.2",
 		"react-redux": "^5.0.7",
 		"redux": "^4.0.1",
+		"redux-thunk": "^2.3.0",
 		"webpack": "^4.20.2",
 		"webpack-bundle-analyzer": "^3.0.3",
 		"webpack-cli": "^3.1.2"
