--- a/themes/experience-engine/package.json
+++ b/themes/experience-engine/package.json
@@ -24,6 +24,7 @@
 		"md5": "^2.2.1",
 		"mini-css-extract-plugin": "^0.4.4",
 		"nprogress": "^0.2.0",
+		"postcss-custom-media": "^7.0.7",
 		"postcss-import": "^12.0.0",
 		"postcss-loader": "^3.0.0",
 		"postcss-preset-env": "^6.1.1",
