--- a/themes/experience-engine/package.json
+++ b/themes/experience-engine/package.json
@@ -21,6 +21,7 @@
 		"eslint-plugin-jsx-a11y": "^6.1.2",
 		"eslint-plugin-react": "^7.11.1",
 		"firebase": "^5.5.4",
+		"lodash.debounce": "^4.0.8",
 		"md5": "^2.2.1",
 		"mini-css-extract-plugin": "^0.4.4",
 		"nprogress": "^0.2.0",
