--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
 		"files": [
 			"mu-plugins/functions/term-data-store.php",
 			"mu-plugins/functions/imageflow.php",
-			"mu-plugins/functions/post.php"
+			"mu-plugins/functions/post.php",
+			"mu-plugins/functions/settings.php"
 		]
 	},
 	"extra": {
