--- a/themes/experience-engine/package.json
+++ b/themes/experience-engine/package.json
@@ -9,10 +9,12 @@
 	"dependencies": {
 		"@10up/eslint-config": "^1.0.6",
 		"@babel/core": "^7.1.6",
+		"@babel/plugin-syntax-dynamic-import": "^7.0.0",
 		"@babel/preset-env": "^7.1.6",
 		"@babel/preset-react": "^7.0.0",
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.0.4",
+		"copy-webpack-plugin": "^4.6.0",
 		"css-loader": "^1.0.1",
 		"cssnano": "^4.1.7",
 		"eslint": "^5.9.0",
@@ -35,6 +37,11 @@
 		"react-redux": "^5.1.1",
 		"redux": "^4.0.1",
 		"redux-thunk": "^2.3.0",
+		"video.js": "^7.3.0",
+		"videojs-contrib-ads": "^6.6.1",
+		"videojs-contrib-quality-levels": "^2.0.9",
+		"videojs-hls-quality-selector": "0.0.8",
+		"videojs-ima": "^1.5.1",
 		"webpack": "^4.25.1",
 		"webpack-bundle-analyzer": "^3.0.3",
 		"webpack-cli": "^3.1.2"
