--- a/themes/experience-engine/package.json
+++ b/themes/experience-engine/package.json
@@ -19,6 +19,7 @@
 		"core-js": "^2.6.2",
 		"css-loader": "^2.1.0",
 		"cssnano": "^4.1.8",
+		"date-input-polyfill": "^2.14.0",
 		"eslint": "^5.12.1",
 		"eslint-loader": "^2.1.1",
 		"eslint-plugin-import": "^2.14.0",
