--- a/themes/experience-engine/package.json
+++ b/themes/experience-engine/package.json
@@ -17,6 +17,7 @@
 		"babel-loader": "^8.0.5",
 		"css-loader": "^2.1.0",
 		"cssnano": "^4.1.8",
+		"dayjs": "^1.8.14",
 		"eslint": "^5.12.1",
 		"eslint-loader": "^2.1.1",
 		"eslint-plugin-import": "^2.14.0",
