--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
 		"wpackagist-plugin/query-monitor": "^3.4.0",
 		"wpackagist-plugin/rewrite-rules-inspector": "^1.2.1",
 		"wpackagist-plugin/debug-bar": "*",
-		"wpackagist-plugin/debug-bar-elasticpress": "*",
+    "wpackagist-plugin/debug-bar-elasticpress": "*",
+    "wpackagist-plugin/wp-newrelic":"^1.3",
+    "wpackagist-plugin/classic-editor":"^1.5",
 		"10up/wp-minions": "^4.1.0",
 		"10up/post-finder": "^0.3.0"
 	},
