--- a/themes/experience-engine/package.json
+++ b/themes/experience-engine/package.json
@@ -37,6 +37,7 @@
     "prop-types": "^15.6.2",
     "react-redux": "^7.1.3",
     "redux": "^4.0.1",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "webpack": "^4.29.0",
     "webpack-bundle-analyzer": "^3.6.0",
