--- a/themes/experience-engine/package.json
+++ b/themes/experience-engine/package.json
@@ -1,10 +1,10 @@
 {
   "name": "experience-engine",
   "scripts": {
-    "analyze": "webpack app=./assets/scripts/app.js --config-name=analyze-config",
-    "build": "webpack app=./assets/scripts/app.js --config-name=dev-config",
-    "watch": "webpack --progress app=./assets/scripts/app.js --config-name=watch-config",
-    "bundle": "webpack app=./assets/scripts/app.js --config-name=prod-config"
+    "analyze": "webpack --config-name=analyze-config",
+    "build": "webpack --config-name=dev-config",
+    "watch": "webpack --progress --config-name=watch-config",
+    "bundle": "webpack --config-name=prod-config"
   },
   "dependencies": {
     "@10up/eslint-config": "^1.0.8",
@@ -26,6 +26,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.4",
+    "firebase": "^7.8.1",
     "isomorphic-unfetch": "^3.0.0",
     "md5": "^2.2.1",
     "mini-css-extract-plugin": "^0.5.0",
@@ -35,6 +36,8 @@
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
     "prop-types": "^15.6.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
