--- a/themes/experience-engine/package.json
+++ b/themes/experience-engine/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.4",
     "firebase": "^7.8.1",
+    "intersection-observer": "^0.7.0",
     "isomorphic-unfetch": "^3.0.0",
     "md5": "^2.2.1",
     "mini-css-extract-plugin": "^0.5.0",
