--- a/themes/experience-engine/package.json
+++ b/themes/experience-engine/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^8.0.5",
     "bowser": "^2.4.0",
     "css-loader": "^2.1.0",
+    "css-vars-ponyfill": "^2.1.2",
     "cssnano": "^4.1.8",
     "dayjs": "^1.8.14",
     "es6-promise": "^4.2.6",
