--- a/themes/experience-engine/package.json
+++ b/themes/experience-engine/package.json
@@ -17,6 +17,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "bowser": "^2.4.0",
+    "core-js": "^3.6.4",
     "css-loader": "^2.1.0",
     "css-vars-ponyfill": "^2.1.2",
     "cssnano": "^4.1.8",
@@ -33,6 +34,7 @@
     "md5": "^2.2.1",
     "mini-css-extract-plugin": "^0.5.0",
     "nprogress": "^0.2.0",
+    "player.js": "^0.1.0",
     "postcss-custom-media": "^7.0.7",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
