--- a/themes/experience-engine/package.json
+++ b/themes/experience-engine/package.json
@@ -45,6 +45,7 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "swiper": "^4.5.0",
     "webpack": "^4.29.0",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.2.1"
