--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ mu-plugins/post-finder/
 !/plugins/semrush-seo-writing-assistant
 !/plugins/affiliate-marketing-cpt
 !/plugins/sendtonews
+!/plugins/prebidjs
 
 themes/index.php
 themes/twentyfourteen
