Support Now Playing On For Jacapps

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ mu-plugins/post-finder/
 !/plugins/affiliate-marketing-cpt
 !/plugins/sendtonews
 !/plugins/prebidjs
+!/plugins/now-playing-jacapps
 
 themes/index.php
 themes/twentyfourteen
