Add Social Share display for app view

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ mu-plugins/post-finder/
 !/plugins/sendtonews
 !/plugins/prebidjs
 !/plugins/now-playing-jacapps
+!/plugins/share-jacapps
 
 themes/index.php
 themes/twentyfourteen
