--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ mu-plugins/post-finder/
 !/plugins/sendtonews
 !/plugins/prebidjs
 !/plugins/now-playing-jacapps
+!/plugins/thumbnail-video-jacapps
 
 themes/index.php
 themes/twentyfourteen
