--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ mu-plugins/post-finder/
 !/plugins/cpt-general-settings
 !/plugins/share-jacapps
 !/plugins/cpt-segment-navigation
+!/plugins/listicle-selection
 
 themes/index.php
 themes/twentyfourteen
