Add max maga menu related two plugins

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ mu-plugins/post-finder/
 !/plugins/gallery-selection
 !/plugins/listicle-selection
 !/plugins/cpt-co-author-settings
+!/plugins/recent-posts-and-nav-menu-widget
 
 themes/index.php
 themes/twentyfourteen
