Upgraded the-events-calendar and wp-fail2ban to unblock deployments to production

--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,13 @@
 		"wpackagist-plugin/public-post-preview": "2.8.0",
 		"wpackagist-plugin/restricted-site-access": "7.2.0",
 		"wpackagist-plugin/term-management-tools": "1.1.4",
-		"wpackagist-plugin/the-events-calendar": "4.9.14.1",
+		"wpackagist-plugin/the-events-calendar": "5.14.0.4",
 		"wpackagist-plugin/wordpress-importer": "^0.6.4",
 		"wpackagist-plugin/wp-crontrol": "1.7.1",
 		"wpackagist-plugin/wordpress-seo": "12.5.1",
 		"wpackagist-plugin/safe-redirect-manager": "1.9.3",
 		"wpackagist-plugin/simple-local-avatars": "2.1.1",
-		"wpackagist-plugin/wp-fail2ban": "4.3.0.9",
+		"wpackagist-plugin/wp-fail2ban": "4.4.0.3",
 		"wpackagist-plugin/disable-real-mime-check": "1.0",
 		"wpackagist-plugin/query-monitor": "3.5.2",
 		"wpackagist-plugin/rewrite-rules-inspector": "1.2.1",
@@ -64,5 +64,7 @@
 				"type:wordpress-plugin"
 			]
 		}
-	}
+	},
+	"minimum-stability": "dev",
+	"prefer-stable": true
 }
