Show STN player in mobile app view

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ mu-plugins/post-finder/
 !/plugins/gallery-selection
 !/plugins/listicle-selection
 !/plugins/cpt-co-author-settings
+!/plugins/stn-jacapps
 
 themes/index.php
 themes/twentyfourteen
