--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,13 @@ deploy_stage:
   only:
     - stage3
 
+notify_slack:
+  stage: test
+  script:
+    - curl -X POST -H 'Content-type: application/json' --data "{\"username\":\"Gitlab Pipeline\", \"text\":\"Gitlab pipeline is running the Production Deployment.\"}" $SLACK_ALERT
+  only:
+    - master
+
 deploy_prod:
   stage: deploy
   environment:
