--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,10 +46,9 @@ deploy_stage:
 notify_slack:
   stage: test
   script:
-    #- 'curl -X POST -H "Content-type: application/json" --data \"{\"username\":\"Gitlab Pipeline\", \"text\":\"Gitlab pipeline is running the Production Deployment.\"}\" "$SLACK_WEBHOOK"'
-    - curl -X POST --data "{\"username\":\"Gitlab Pipeline\", \"text\":\"Gitlab pipeline is running the Production Deployment.\"}" $SLACK_WEBHOOK
+    - curl -X POST --data "{\"username\":\"Gitlab Pipeline\", \"text\":\"Gitlab pipeline is about to run the Production Deployment..\"}" $SLACK_WEBHOOK
   only:
-    - feature/add-slackalert-gitlab-pipeline
+    - master
 
 deploy_prod:
   stage: deploy
